# 10hours

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ExportPanel.tsx  FilePicker.tsx  VisualPreview.tsx  WaveformEditor.tsx
src/lib/: tauriPlatform.ts
src/state/: useAppStore.ts
src/types/: wavesurfer.d.ts
