[package]
name = "audio_loop_visualizer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[profile.dev]
incremental = true
codegen-units = 256

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
